# llm-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/llm-anthropic/: Cargo.toml
crates/llm-anthropic/src/: messages.rs  provider.rs  sse.rs  types.rs
crates/llm-cli/: Cargo.toml
crates/llm-cli/src/: app.rs  main.rs  retry.rs
crates/llm-cli/src/commands/: agent.rs  aliases.rs  chat.rs  dry_run.rs  keys.rs  logs.rs  mod.rs  models.rs  options.rs  plugins.rs  prompt.rs  schemas.rs  tools.rs
crates/llm-cli/src/subprocess/: discovery.rs  mod.rs  protocol.rs  provider.rs  tool.rs
crates/llm-cli/tests/: integration.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: agent.rs  chain.rs  config.rs  error.rs  lib.rs  provider.rs  retry.rs  schema.rs  stream.rs  tools.rs  types.rs
crates/llm-openai/: Cargo.toml
crates/llm-openai/src/: lib.rs  messages.rs  provider.rs  sse.rs  types.rs
crates/llm-python/: Cargo.toml  Makefile  pyproject.toml
crates/llm-python/src/: agent.rs  conversation.rs  lib.rs  log_store_py.rs  response_build.rs  retry.rs  tools.rs
crates/llm-store/: Cargo.toml
crates/llm-store/src/: lib.rs  logs.rs  query.rs  records.rs  store.rs
crates/llm-wasm/: Cargo.toml
crates/llm-wasm/src/: agent.rs  conversation.rs  lib.rs  retry.rs  store.rs  tools.rs
doc/: implementation.md  metaplan.md  process.md  roadmap.md
doc/cookbook/: python.md  specialist-tools.md  wasm.md
doc/design/: architecture.md  axe-readiness-assessment.md
doc/research/: axe-readiness-assessment.md  axe-sub-agent-delegation.md  react-loop-comparison.md  specialist-tools-vs-sub-agents.md  unix-philosophy-agent-in-rust.md
doc/spec/: external-providers.md  external-tools.md
scripts/: bump-version.sh
