[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
