[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/llm-wasm", "crates/llm-python"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
temp-env = "0.3"
