[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/llm-wasm", "crates/llm-python"]

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tlkahn/llm-rs"
authors = ["tlkahn <joshgy@gmail.com>"]
rust-version = "1.85"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
temp-env = "0.3"
fastrand = "2"
