[package]
name = "llm-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm"
path = "src/main.rs"

[dependencies]
llm-core = { path = "../llm-core" }
llm-openai = { path = "../llm-openai", optional = true }
llm-anthropic = { path = "../llm-anthropic", optional = true }
llm-store = { path = "../llm-store" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
rpassword = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
wiremock = "0.6"
temp-env = { workspace = true }

[features]
default = ["openai", "anthropic"]
openai = ["dep:llm-openai"]
anthropic = ["dep:llm-anthropic"]
