[package]
name = "llm-cmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "A CLI tool for interacting with LLMs (OpenAI, Anthropic) via a unified interface"
keywords = ["llm", "cli", "openai", "anthropic", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "llm"
path = "src/main.rs"

[dependencies]
llm-core = { path = "../llm-core", version = "0.11.0" }
llm-openai = { path = "../llm-openai", version = "0.11.0", optional = true }
llm-anthropic = { path = "../llm-anthropic", version = "0.11.0", optional = true }
llm-store = { path = "../llm-store", version = "0.11.0" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
rpassword = "7"
rustyline = "15"
async-stream = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
wiremock = "0.6"
temp-env = { workspace = true }

[features]
default = ["openai", "anthropic"]
openai = ["dep:llm-openai"]
anthropic = ["dep:llm-anthropic"]
