[package]
name = "llm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Core traits, types, and streaming primitives for the llm-cmd LLM toolkit"
keywords = ["llm", "ai", "openai", "anthropic", "streaming"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
fastrand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
temp-env = { workspace = true }
tempfile = { workspace = true }
