[package]
name = "llm-python"
version = "0.11.0"
edition = "2024"

[lib]
name = "llm_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
llm-core = { path = "../llm-core" }
llm-openai = { path = "../llm-openai" }
llm-anthropic = { path = "../llm-anthropic" }
llm-store = { path = "../llm-store" }
pyo3 = { version = "0.23", features = ["abi3-py38"] }
pythonize = "0.23"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
