[package]
name = "llm-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "JSONL conversation log storage for the llm-cmd toolkit"
keywords = ["llm", "logging", "storage", "conversations"]
categories = ["database", "asynchronous"]

[dependencies]
llm-core = { path = "../llm-core", version = "0.11.0" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
