[package]
name = "llm-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
llm-core = { path = "../llm-core" }
llm-openai = { path = "../llm-openai" }
llm-anthropic = { path = "../llm-anthropic" }
llm-store = { path = "../llm-store" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
futures = "0.3"
async-trait = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
